--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <body>
 
 <h2>TASK 1</h2>
-<button id="btn-1-test-add-ajax">Add to Page</button>
-<button id="btn-1-test">Add Next Page</button>
-<p id="name_of_char"></p>
-<div id="div_task1"></div>
+<div id="div_main_1">
+	<button id="btn-1-test-add-ajax">Add to Page</button>
+	<button id="btn-1-test">Add Next Page</button>
+	<p id="name_of_char"></p>
+	<div id="div_task1"></div>
+</div>
+
 <hr>
 
 <h2>TASK 2</h2>
